--- a/app/assets/stylesheets/cs_lightbox.css.sass
+++ b/app/assets/stylesheets/cs_lightbox.css.sass
@@ -4,21 +4,24 @@
   bottom: 0px
   left: 0px
   right: 0px
+  padding: 20px
   z-index: 9999
   display: none
   .cs-lightbox-overlay
-    position: absolute
+    position: fixed
     top: 0px
     bottom: 0px
     left: 0px
     right: 0px
     background: black
     opacity: .5
+    z-index: -1
+
   .cs-lightbox-image
-    position: absolute
-    top: 100px
-    left: 15%
-    width: 70%
+    width: 100%
+    margin: 0 auto
+    img
+      width: 100%
 
 .show-cs-lightbox
   display: block
