[knife] update images

--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -4,7 +4,7 @@
 .container
   .row.section#knife-intro
     .span5
-      = image_tag ('https://www.filepicker.io/api/file/Ya5vpVc1RzysqAPC5ZIJ/convert?fit=max&w=550')
+      = image_tag ('https://www.filepicker.io/api/file/Ya5vpVc1RzysqAPC5ZIJ/convert?fit=max&w=550&cache=true')
     .span7
       %h1 ChefSteps Knife Collection
       %p An exceptional knife should be the cornerstone of a cook's arsenal. It becomes an extension of your own hands; the tool with which you will create art and bring refinement to the table. A beautiful, high-quality knife will follow you to every kitchen and last a lifetime if properly cared for. Handcrafted Japanese knives in particular bring elegance and sophistication to any dish—a perfectly sliced piece of salmon; a delicate chiffonade; a meticulous dice—all expertly executed with slender, high-performance Japanese blades. Our readers have asked what knives we use when we cook, and this curated collection of hand-forged artisan knives, each completely unique and in finite supply, is our answer. In other words: Only the best.
@@ -36,24 +36,24 @@
             .annotation-slider-note-gallery
               .annotation-slider-note-gallery-images
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3/convert?fit=max&w=550'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3/convert?fit=max&w=550&cache=true'
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw/convert?fit=max&w=550'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw/convert?fit=max&w=550&cache=true'
               .annotation-slider-note-gallery-thumbnails
                 .annotation-slider-note-gallery-thumbnail
                   .open-lightbox(data-url="https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3")
-                    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3/convert?fit=max&w=75'
+                    = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3/convert?fit=max&w=75&cache=true'
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw/convert?fit=max&w=75'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw/convert?fit=max&w=75&cache=true'
             %p.section Modeled after the French chef’s blade but with all the grace and beauty of a Japanese handmade knife, this Gyuto is exceptionally versatile as a general chef’s knife. The core is made of the finest Japanese carbon steel for unparalleled edge holding, and the blade’s distal tapering provides optimal balance and weight. A Makassar ebony handle and Pakkawood ferrules further classify this knife as a work of art.
             = buy_now(350234061,325)
           .annotation-slider-image
-            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/qzxRQ0rPS2j4tFZKutmg')
+            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/qzxRQ0rPS2j4tFZKutmg?cache=true')
           .annotation-slider-note.note-right
             %a.annotation-close-btn
               %i.icon-remove
             %h3 Asai Petty Knife
-            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/uAG5HZMRxCmnSpb5a7mA', :class => "main-image"
+            = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/uAG5HZMRxCmnSpb5a7mA?cache=true', :class => "main-image"
             %p.section This high performance detail knife is made with the finest Japanese carbon steel for exceptional edge holding. A brushed stainless steel blade seems understated at first look (at least for Asai, whose knives usually feature highly stylized blades), but there’s intrigue here: after a few weeks of use, the carbon steel core gives way to a remarkable blue patina that need not be removed.
             = buy_now(350067813,169)
 
@@ -85,22 +85,22 @@
             .annotation-slider-note-gallery
               .annotation-slider-note-gallery-images
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/JuAyLXdSMSLoIyuVAqA4'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/JuAyLXdSMSLoIyuVAqA4?cache=true'
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/LNrdE7aRRLSaKt8gKtNM'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/LNrdE7aRRLSaKt8gKtNM?cache=true'
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/THxjO9E1TEqCyWaeytT7'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/THxjO9E1TEqCyWaeytT7?cache=true'
               .annotation-slider-note-gallery-thumbnails
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/JuAyLXdSMSLoIyuVAqA4/convert?fit=max&w=75'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/JuAyLXdSMSLoIyuVAqA4/convert?fit=max&w=75&cache=true'
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/LNrdE7aRRLSaKt8gKtNM/convert?fit=max&w=75'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/LNrdE7aRRLSaKt8gKtNM/convert?fit=max&w=75&cache=true'
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/THxjO9E1TEqCyWaeytT7/convert?fit=max&w=75'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/THxjO9E1TEqCyWaeytT7/convert?fit=max&w=75&cache=true'
             %p.section With its thin blade geometry, solid pakkawood handle, and hammer finish, this knife is both beautiful and versatile. The blade has a VG10 super-steel core surrounded by 15 layers of stainless damascus for exceptional edge holding. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
             = buy_now(345914261,129)
           .annotation-slider-image
-            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/XPuEItyPTOaL2iO5r79j')
+            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/XPuEItyPTOaL2iO5r79j?cache=true')
           .annotation-slider-note.note-right
             %a.annotation-close-btn
               %i.icon-remove
@@ -108,14 +108,14 @@
             .annotation-slider-note-gallery
               .annotation-slider-note-gallery-images
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/4VfViqxwSIO1O2kxWt5G'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/4VfViqxwSIO1O2kxWt5G?cache=true'
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/naTWQB6ySXOVZR1V4plT'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/naTWQB6ySXOVZR1V4plT?cache=true'
               .annotation-slider-note-gallery-thumbnails
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/4VfViqxwSIO1O2kxWt5G/convert?fit=max&w=75'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/4VfViqxwSIO1O2kxWt5G/convert?fit=max&w=75&cache=true'
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/naTWQB6ySXOVZR1V4plT/convert?fit=max&w=75'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/naTWQB6ySXOVZR1V4plT/convert?fit=max&w=75&cache=true'
             %p.section Perfect as a general purpose kitchen knife, this long, slender Petty blade has a VG10 super-steel core for clean cutting, and a balanced pakkawood handle that’s durable and moisture-resistant. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
             = buy_now(345912499,84)
 
@@ -153,22 +153,22 @@
             .annotation-slider-note-gallery
               .annotation-slider-note-gallery-images
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/byaPReR5RPauvhY1Ze0t/convert?fit=max&h=161'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/byaPReR5RPauvhY1Ze0t?cache=true'
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/aMonSF5TCeKddFWFi2z6'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/aMonSF5TCeKddFWFi2z6?cache=true'
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi?cache=true'
               .annotation-slider-note-gallery-thumbnails
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/byaPReR5RPauvhY1Ze0t/convert?fit=max&w=75'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/byaPReR5RPauvhY1Ze0t/convert?fit=max&w=75&cache=true'
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/aMonSF5TCeKddFWFi2z6/convert?fit=max&w=75'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/aMonSF5TCeKddFWFi2z6/convert?fit=max&w=75&cache=true'
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi/convert?fit=max&w=75'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi/convert?fit=max&w=75&cache=true'
             %p.section This elegant all-purpose chef’s knife features a long, slim blade perfect for sawing meat and vegetables, with a subtly uneven surface that prevents food from sticking. It features extremely rare blond buffalo horn ferrules, an ambidextrous enju wood handle, and a slim two-tone blade for a perfectly balanced, exceptionally handsome knife.
             = buy_now(345920775,464)
           .annotation-slider-image
-            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/MeXcSoEzSTCg05jeRkhn')
+            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/MeXcSoEzSTCg05jeRkhn?cache=true')
           .annotation-slider-note.note-right
             %a.annotation-close-btn
               %i.icon-remove
@@ -176,14 +176,14 @@
             .annotation-slider-note-gallery
               .annotation-slider-note-gallery-images
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/zxxRDkwzTDqesXVpJrle/convert?fit=max&h=161'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/zxxRDkwzTDqesXVpJrle?cache=true'
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi?cache=true'
               .annotation-slider-note-gallery-thumbnails
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/zxxRDkwzTDqesXVpJrle/convert?fit=max&w=75'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/zxxRDkwzTDqesXVpJrle/convert?fit=max&w=75&cache=true'
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi/convert?fit=max&w=75'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi/convert?fit=max&w=75&cache=true'
             %p.section Best for detail slicing—think tomatoes and garlic—this utility knife by Yoshikane has a smooth, slender blade comprised of SLD stainless steel (core) and stainless steel damascus (surface) that slides easily through food. The blade’s suminagashi pattern (meaning "floating ink" in Japanese) together with its light enju wood handle (the same wood used for making Shinto shrines) makes it a perfect balance of artistry and performance.
             = buy_now(345920201,339)
 
@@ -214,22 +214,22 @@
             .annotation-slider-note-gallery
               .annotation-slider-note-gallery-images
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xZBHFGfRByCEXftfgE2Q/convert?fit=max&w=500'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xZBHFGfRByCEXftfgE2Q?cache=true'
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/1hfmZ0YOQsC3DGZkCwXb/convert?fit=max&w=500'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/1hfmZ0YOQsC3DGZkCwXb?cache=true'
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/Uf9mCymiRjqGtRw7y8id/convert?fit=max&w=500'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/Uf9mCymiRjqGtRw7y8id?cache=true'
                 .annotation-slider-note-gallery-image
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/73gcpvPeSTCeCMGHMeDr/convert?fit=max&w=500'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/73gcpvPeSTCeCMGHMeDr?cache=true'
               .annotation-slider-note-gallery-thumbnails
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xZBHFGfRByCEXftfgE2Q/convert?fit=max&w=100'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xZBHFGfRByCEXftfgE2Q/convert?fit=max&w=100&cache=true'
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/1hfmZ0YOQsC3DGZkCwXb/convert?fit=max&w=100'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/1hfmZ0YOQsC3DGZkCwXb/convert?fit=max&w=100&cache=true'
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/Uf9mCymiRjqGtRw7y8id/convert?fit=max&w=100'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/Uf9mCymiRjqGtRw7y8id/convert?fit=max&w=100&cache=true'
                 .annotation-slider-note-gallery-thumbnail
-                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/73gcpvPeSTCeCMGHMeDr/convert?fit=max&w=100'
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/73gcpvPeSTCeCMGHMeDr/convert?fit=max&w=100&cache=true'
             %p.section
               Includes the following stones. For more details, see the shop page.
 
@@ -253,7 +253,7 @@
 
             = buy_now(350238365,154)
           .annotation-slider-image
-            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/t3l7VdjR1qjMMWTNufwJ')
+            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/t3l7VdjR1qjMMWTNufwJ?cache=true')
 
 // End Sharpening Stones //
 
@@ -269,7 +269,7 @@
             %a.annotation-slider-btn#honing(data-annotation-slider-reveal='right')
               +
           .annotation-slider-image
-            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/hmePwJWDRpqFOpXzWQTV')
+            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/hmePwJWDRpqFOpXzWQTV?cache=true')
           .annotation-slider-note.note-right
             %a.annotation-close-btn
               %i.icon-remove
