[knife] lightbox for all

--- a/app/assets/stylesheets/knife_collection.css.sass
+++ b/app/assets/stylesheets/knife_collection.css.sass
@@ -266,6 +266,7 @@
           .annotation-slider-note-gallery-thumbnail
             float: left
             margin-right: 5px
+            margin-bottom: 5px
     .note-left
       left: -300px
       top: 0px
