[knife] click image to enlarge

--- a/app/assets/stylesheets/knife_collection.css.sass
+++ b/app/assets/stylesheets/knife_collection.css.sass
@@ -330,6 +330,10 @@
         left: 80%
         top: 35%
 
+.annotation-click-image
+  float: left
+  width: 100%
+
 @media (max-width: 480px)
   .annotation-slider-note
     width: 100%
