--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -44,6 +44,8 @@
                   = render '/shared/open_lightbox', image_url: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3', thumbnail_width: '124'
                 .annotation-slider-note-gallery-thumbnail
                   = render '/shared/open_lightbox', image_url: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw', thumbnail_width: '124'
+                .annotation-click-image
+                  %small click images to enlarge
             %p.section Modeled after the French chef’s blade but with all the grace and beauty of a Japanese handmade knife, this Gyuto is exceptionally versatile as a general chef’s knife. The core is made of the finest Japanese carbon steel for unparalleled edge holding, and the blade’s distal tapering provides optimal balance and weight. A Makassar ebony handle and Pakkawood ferrules further classify this knife as a work of art.
             = buy_now(350234061,325)
           .annotation-slider-image
@@ -53,6 +55,8 @@
               %i.icon-remove
             %h3 Asai Petty Knife
             = render '/shared/open_lightbox', image_url: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/uAG5HZMRxCmnSpb5a7mA', thumbnail_width: '258'
+            .annotation-click-image
+              %small click image to enlarge
             %p.section This high performance detail knife is made with the finest Japanese carbon steel for exceptional edge holding. A brushed stainless steel blade seems understated at first look (at least for Asai, whose knives usually feature highly stylized blades), but there’s intrigue here: after a few weeks of use, the carbon steel core gives way to a remarkable blue patina that need not be removed.
             = buy_now(350067813,169)
 
@@ -96,6 +100,8 @@
                   = render '/shared/open_lightbox', image_url: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/LNrdE7aRRLSaKt8gKtNM', thumbnail_width: '124'
                 .annotation-slider-note-gallery-thumbnail
                   = render '/shared/open_lightbox', image_url: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/THxjO9E1TEqCyWaeytT7', thumbnail_width: '124'
+                .annotation-click-image
+                  %small click images to enlarge
             %p.section With its thin blade geometry, solid pakkawood handle, and hammer finish, this knife is both beautiful and versatile. The blade has a VG10 super-steel core surrounded by 15 layers of stainless damascus for exceptional edge holding. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
             = buy_now(345914261,129)
           .annotation-slider-image
@@ -115,6 +121,8 @@
                   = render '/shared/open_lightbox', image_url: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/4VfViqxwSIO1O2kxWt5G', thumbnail_width: '124'
                 .annotation-slider-note-gallery-thumbnail
                   = render '/shared/open_lightbox', image_url: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/naTWQB6ySXOVZR1V4plT', thumbnail_width: '124'
+                .annotation-click-image
+                  %small click images to enlarge
             %p.section Perfect as a general purpose kitchen knife, this long, slender Petty blade has a VG10 super-steel core for clean cutting, and a balanced pakkawood handle that’s durable and moisture-resistant. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
             = buy_now(345912499,84)
 
@@ -164,6 +172,8 @@
                   = render '/shared/open_lightbox', image_url: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/aMonSF5TCeKddFWFi2z6', thumbnail_width: '124'
                 .annotation-slider-note-gallery-thumbnail
                   = render '/shared/open_lightbox', image_url: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi', thumbnail_width: '124'
+                .annotation-click-image
+                  %small click images to enlarge
             %p.section This elegant all-purpose chef’s knife features a long, slim blade perfect for sawing meat and vegetables, with a subtly uneven surface that prevents food from sticking. It features extremely rare blond buffalo horn ferrules, an ambidextrous enju wood handle, and a slim two-tone blade for a perfectly balanced, exceptionally handsome knife.
             = buy_now(345920775,464)
           .annotation-slider-image
@@ -183,6 +193,8 @@
                   = render '/shared/open_lightbox', image_url: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/zxxRDkwzTDqesXVpJrle', thumbnail_width: '124'
                 .annotation-slider-note-gallery-thumbnail
                   = render '/shared/open_lightbox', image_url: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi', thumbnail_width: '124'
+                .annotation-click-image
+                  %small click images to enlarge
             %p.section Best for detail slicing—think tomatoes and garlic—this utility knife by Yoshikane has a smooth, slender blade comprised of SLD stainless steel (core) and stainless steel damascus (surface) that slides easily through food. The blade’s suminagashi pattern (meaning "floating ink" in Japanese) together with its light enju wood handle (the same wood used for making Shinto shrines) makes it a perfect balance of artistry and performance.
             = buy_now(345920201,339)
 
@@ -229,6 +241,8 @@
                   = render '/shared/open_lightbox', image_url: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/Uf9mCymiRjqGtRw7y8id', thumbnail_width: '124'
                 .annotation-slider-note-gallery-thumbnail
                   = render '/shared/open_lightbox', image_url: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/73gcpvPeSTCeCMGHMeDr', thumbnail_width: '124'
+                .annotation-click-image
+                  %small click images to enlarge
             %p.section
               Includes the following stones. For more details, see the shop page.
 
