[knife] copy fix

--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -123,7 +123,7 @@
                   = render '/shared/open_lightbox', image_url: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/naTWQB6ySXOVZR1V4plT', thumbnail_width: '124'
                 .annotation-click-image
                   %small click images to enlarge
-            %p.section Perfect as a general purpose kitchen knife, this long, slender Petty blade has a VG10 super-steel core for clean cutting, and a balanced pakkawood handle that’s durable and moisture-resistant. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
+            %p.section Perfect as a general purpose kitchen knife, this long, slender petty blade has a VG10 super-steel core for clean cutting, and a balanced pakkawood handle that’s durable and moisture-resistant. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
             = buy_now(345912499,84)
 
 // End Ohishi //
@@ -255,14 +255,11 @@
               %h5 #3000/#8000 Grit Waterstone
               %p This two-sided waterstone has a broad surface for refining longer knives. The #3000 grit side can be used to remove scratches or hone an aggressive edge, while the superfine #8000 grit side is perfect for creating a razor-sharp edge and polishing.
 
-              %h5 Nagura Stones
+              %h5 Nagura Stone
               %p Nagura stones are extremely fine chalk stones that may be used to polish knives or clean the surfaces of your waterstones. They will improve the cutting effect of any stones with #3000 grit or greater.
 
               %h5 Stone Holder
               %p This stone holder has rubber feet for stability and rubber ends that will grip your waterstones without damaging them. The chrome-plated metal rods are rust resistant.
-
-              %h5 Honing Rod
-              %p Ceramic honing rods keep your knife in excellent condition between sharpening. A high-quality ceramic rod removes minimal material, maintaining a razor sharp edge without reshaping or scratching the blade.
 
             = buy_now(350238365,154)
           .annotation-slider-image
