[knife] section intro styling

--- a/app/assets/stylesheets/knife_collection.css.sass
+++ b/app/assets/stylesheets/knife_collection.css.sass
@@ -13,6 +13,9 @@
   -moz-transition-duration: 0.5s
   -o-transition-duration: 0.5s
   transition-duration: 0.5s
+  .knife-content
+    width: 900px
+    margin: 0 auto
 
 .modal
   max-height: 500px
@@ -176,6 +179,10 @@
 @media (max-width: 980px)
   .knife.first
     margin-top: 320px
+
+  .knife
+    .knife-content
+      width: 100%
 
 @media (max-width: 767px)
   .knife.first
