--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -12,10 +12,9 @@
 // Start ASAI //
 
 .knife.first
-  .row.section
-    .span10.offset1
-      %h3.media-heading Asai
-      High in the Japanese Alps, in the small town of Takefu in the Fukui Prefecture, fifth-generation blacksmith Masami Asai forges some of the most distinctive handmade kitchen knives in the world. His knives are both elegant and functional, made with the highest grade carbon steel alloy for perfect edge retention, and finished with graceful details like mocha-colored Makassar ebony and rich Pakkawood ferrules. Together with four other bladesmiths in the region, Asai opened a knifemaking school in Takefu in 1993, where he and others teach the artistry and tradition of handmade knifemaking to the next generation. Asai is a living legend among Japanese knifemakers, well-known by chefs worldwide for his delicate handiwork.
+  .knife-content
+    %h3.media-heading Asai
+    High in the Japanese Alps, in the small town of Takefu in the Fukui Prefecture, fifth-generation blacksmith Masami Asai forges some of the most distinctive handmade kitchen knives in the world. His knives are both elegant and functional, made with the highest grade carbon steel alloy for perfect edge retention, and finished with graceful details like mocha-colored Makassar ebony and rich Pakkawood ferrules. Together with four other bladesmiths in the region, Asai opened a knifemaking school in Takefu in 1993, where he and others teach the artistry and tradition of handmade knifemaking to the next generation. Asai is a living legend among Japanese knifemakers, well-known by chefs worldwide for his delicate handiwork.
 
 
 .container
@@ -65,10 +64,9 @@
 // Start OHISHI //
 
 .knife.section
-  .row.section
-    .span10.offset1
-      %h3.media-heading Ohishi Hammer
-      Ohishi produces some of the finest-quality factory knives in the world, with stylized, ultra-thin blades that surpass most German and American handmade knives in both performance and beauty. At Ohishi, a small team of twenty-or-so blacksmiths and artisans design and forge knives with a characteristically thin blade geometry for clean cutting, and western-style riveted handles. The company, named after a small village at the foot of Mt Fuji where lavender grows rampant, set out to introduce high-performance knives at affordable prices, and they’ve done just that.
+  .knife-content
+    %h3.media-heading Ohishi Hammer
+    Ohishi produces some of the finest-quality factory knives in the world, with stylized, ultra-thin blades that surpass most German and American handmade knives in both performance and beauty. At Ohishi, a small team of twenty-or-so blacksmiths and artisans design and forge knives with a characteristically thin blade geometry for clean cutting, and western-style riveted handles. The company, named after a small village at the foot of Mt Fuji where lavender grows rampant, set out to introduce high-performance knives at affordable prices, and they’ve done just that.
 
 .container
   .row.section
@@ -131,15 +129,14 @@
 // Start Yoshikane //
 
 .knife.section
-  .row.section
-    .span10.offset1
-      %h3.media-heading Yoshikane 
-      %p 
-        Widely regarded as one of the most influential living knifemakers in Japan, Mr. Tsuneo Yoshida handcrafts each Yoshikane knife with unmatched precision and artistry from his shop in Sanjo City, in the Niigata Prefecture of Japan. 
-      %p
-        Here, nestled in a valley along the northwestern coast of the Japanese Alps region, bladesmithing is a long-standing tradition dating back to the Edo period, when Japanese artisans manufactured the very first western-style pointed knives in Japan. Now, Sanjo City is home to some of the highest-quality handmade knifemaking in the world, and Mr. Tsuneo Yoshida continues and elevates that tradition in earnest. 
-      %p
-        Yoshida forged his first knife at the age of 18, after learning from his grandfather, and has now passed it along to his two nephews, who will take over the business when Yoshida retires. The tight-knit Yoshida family rises early each morning, and meticulously hand-makes each and every Yoshikane knife using rare, hard-to-source materials like blonde buffalo horn, mammoth ivory, and enju wood. Every Yoshikane knife is a work of art, but their beauty is certainly matched in performance—these blades are considered among the highest-caliber available, with exceptional edge-holding and comfortable feel.
+  .knife-content
+    %h3.media-heading Yoshikane 
+    %p 
+      Widely regarded as one of the most influential living knifemakers in Japan, Mr. Tsuneo Yoshida handcrafts each Yoshikane knife with unmatched precision and artistry from his shop in Sanjo City, in the Niigata Prefecture of Japan. 
+    %p
+      Here, nestled in a valley along the northwestern coast of the Japanese Alps region, bladesmithing is a long-standing tradition dating back to the Edo period, when Japanese artisans manufactured the very first western-style pointed knives in Japan. Now, Sanjo City is home to some of the highest-quality handmade knifemaking in the world, and Mr. Tsuneo Yoshida continues and elevates that tradition in earnest. 
+    %p
+      Yoshida forged his first knife at the age of 18, after learning from his grandfather, and has now passed it along to his two nephews, who will take over the business when Yoshida retires. The tight-knit Yoshida family rises early each morning, and meticulously hand-makes each and every Yoshikane knife using rare, hard-to-source materials like blonde buffalo horn, mammoth ivory, and enju wood. Every Yoshikane knife is a work of art, but their beauty is certainly matched in performance—these blades are considered among the highest-caliber available, with exceptional edge-holding and comfortable feel.
 
 
 .container
@@ -203,11 +200,10 @@
 // Start Sharpening Stones //
 
 .knife.section
-  .row.section
-    .span10.offset1
-      %h3.media-heading Sharpening Stones Kit 
-      :markdown 
-        A collection of high-quality knives requires a collection of high-quality waterstones to match. These professional-grade stones, designed specifically to sharpen high-quality steel, will keep your knives in superb condition for years to come. (Lower grade stones are often fragmented in their particle composition, making sharpening difficult and inconsistent.) Fix a broken tip, repair a damaged edge, polish your blade, or hone to razor sharp: This kit has everything you need to care for your finest knives. And [here’s how](http://www.chefsteps.com/activities/how-to-sharpen-a-knife).
+  .knife-content
+    %h3.media-heading Sharpening Stones Kit 
+    :markdown 
+      A collection of high-quality knives requires a collection of high-quality waterstones to match. These professional-grade stones, designed specifically to sharpen high-quality steel, will keep your knives in superb condition for years to come. (Lower grade stones are often fragmented in their particle composition, making sharpening difficult and inconsistent.) Fix a broken tip, repair a damaged edge, polish your blade, or hone to razor sharp: This kit has everything you need to care for your finest knives. And [here’s how](http://www.chefsteps.com/activities/how-to-sharpen-a-knife).
 
 .container
   .row.section
