--- a/app/assets/stylesheets/cs_lightbox.css.sass
+++ b/app/assets/stylesheets/cs_lightbox.css.sass
@@ -26,6 +26,10 @@
   .cs-lightbox-image
     width: 100%
     margin: 0 auto
+    box-shadow: 0px 0px 100px black
+    -moz-box-box-shadow: 0px 0px 100px black
+    -webkit-box-shadow: 0px 0px 100px black
+    -o-box-shadow: 0px 0px 100px black
     img
       width: 100%
 
