[knife] social media

--- a/app/assets/stylesheets/knife_collection.css.sass
+++ b/app/assets/stylesheets/knife_collection.css.sass
@@ -275,6 +275,10 @@
             float: left
             margin-right: 5px
             margin-bottom: 5px
+      .social-flat
+        .btn-holder
+          .btn-social
+            margin: 0px
     .note-left
       left: -300px
       top: 0px
