--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -25,9 +25,9 @@
         .annotation-slider
           .annotation-close-overlay
           .annotation-buttons
-            %a.annotation-slider-btn#asai-1(data-annotation-slider-reveal='left')
+            %a.annotation-slider-btn#asai-1(data-annotation-slider-reveal='left' onclick="mixpanel.track('Viewed Knife Detail', {'product' : 'Asai Chef Knife'});")
               +
-            %a.annotation-slider-btn#asai-2(data-annotation-slider-reveal='right')
+            %a.annotation-slider-btn#asai-2(data-annotation-slider-reveal='right' onclick="mixpanel.track('Viewed Knife Detail', {'product' : 'Asai Petty Knife'});")
               +
           .annotation-slider-note.note-left
             %a.annotation-close-btn
@@ -43,7 +43,7 @@
                   %small click images to enlarge
             = render 'knife_collection_social', title: 'Asai Chef Knife', image: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3'
             %p.section Modeled after the French chef’s blade but with all the grace and beauty of a Japanese handmade knife, this Gyuto is exceptionally versatile as a general chef’s knife. The core is made of the finest Japanese carbon steel for unparalleled edge holding, and the blade’s distal tapering provides optimal balance and weight. A Makassar ebony handle and Pakkawood ferrules further classify this knife as a work of art.
-            = buy_now(350234061,325)
+            = buy_now(350234061,325,"mixpanel.track('Clicked Knife Buy Now', {'product' : 'Asai Chef Knife'});")
           .annotation-slider-image
             = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/qzxRQ0rPS2j4tFZKutmg?cache=true')
           .annotation-slider-note.note-right
@@ -55,7 +55,7 @@
               %small click image to enlarge
             = render 'knife_collection_social', title: 'Asai Petty Knife', image: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/uAG5HZMRxCmnSpb5a7mA'
             %p.section This high performance detail knife is made with the finest Japanese carbon steel for exceptional edge holding. A brushed stainless steel blade seems understated at first look (at least for Asai, whose knives usually feature highly stylized blades), but there’s intrigue here: after a few weeks of use, the carbon steel core gives way to a remarkable blue patina that need not be removed.
-            = buy_now(350067813,169)
+            = buy_now(350067813,169,"mixpanel.track('Clicked Knife Buy Now', {'product' : 'Asai Petty Knife'});")
 
 // End ASAI //
 
@@ -73,9 +73,9 @@
         .annotation-slider
           .annotation-close-overlay
           .annotation-buttons
-            %a.annotation-slider-btn#ohishi-1(data-annotation-slider-reveal='left')
+            %a.annotation-slider-btn#ohishi-1(data-annotation-slider-reveal='left' onclick="mixpanel.track('Viewed Knife Detail', {'product' : 'Ohishi Chef Knife'});")
               +
-            %a.annotation-slider-btn#ohishi-2(data-annotation-slider-reveal='right')
+            %a.annotation-slider-btn#ohishi-2(data-annotation-slider-reveal='right' onclick="mixpanel.track('Viewed Knife Detail', {'product' : 'Ohishi Petty Knife'});")
               +
           .annotation-slider-note.note-left
             %a.annotation-close-btn
@@ -93,7 +93,7 @@
                   %small click images to enlarge
             = render 'knife_collection_social', title: 'Ohishi Chef Knife', image: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/JuAyLXdSMSLoIyuVAqA4'
             %p.section With its thin blade geometry, solid pakkawood handle, and hammer finish, this knife is both beautiful and versatile. The blade has a VG10 super-steel core surrounded by 15 layers of stainless damascus for exceptional edge holding. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
-            = buy_now(345914261,129)
+            = buy_now(345914261,129,"mixpanel.track('Clicked Knife Buy Now', {'product' : 'Ohishi Chef Knife'});")
           .annotation-slider-image
             = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/XPuEItyPTOaL2iO5r79j?cache=true')
           .annotation-slider-note.note-right
@@ -110,7 +110,7 @@
                   %small click images to enlarge
             = render 'knife_collection_social', title: 'Ohishi Petty Knife', image: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/4VfViqxwSIO1O2kxWt5G'
             %p.section Perfect as a general purpose kitchen knife, this long, slender petty blade has a VG10 super-steel core for clean cutting, and a balanced pakkawood handle that’s durable and moisture-resistant. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
-            = buy_now(345912499,84)
+            = buy_now(345912499,84,"mixpanel.track('Clicked Knife Buy Now', {'product' : 'Ohishi Petty Knife'});")
 
 // End Ohishi //
 
@@ -134,9 +134,9 @@
         .annotation-slider
           .annotation-close-overlay
           .annotation-buttons
-            %a.annotation-slider-btn#yoshikane-1(data-annotation-slider-reveal='left')
+            %a.annotation-slider-btn#yoshikane-1(data-annotation-slider-reveal='left' onclick="mixpanel.track('Viewed Knife Detail', {'product' : 'Yoshikane Chef Knife'});")
               +
-            %a.annotation-slider-btn#yoshikane-2(data-annotation-slider-reveal='right')
+            %a.annotation-slider-btn#yoshikane-2(data-annotation-slider-reveal='right' onclick="mixpanel.track('Viewed Knife Detail', {'product' : 'Yoshikane Petty Knife'});")
               +
           .annotation-slider-note.note-left
             %a.annotation-close-btn
@@ -154,7 +154,7 @@
                   %small click images to enlarge
             = render 'knife_collection_social', title: 'Yoshikane Chef Knife', image: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/byaPReR5RPauvhY1Ze0t'
             %p.section This elegant all-purpose chef’s knife features a long, slim blade perfect for sawing meat and vegetables, with a subtly uneven surface that prevents food from sticking. It features extremely rare blond buffalo horn ferrules, an ambidextrous enju wood handle, and a slim two-tone blade for a perfectly balanced, exceptionally handsome knife.
-            = buy_now(345920775,464)
+            = buy_now(345920775,464,"mixpanel.track('Clicked Knife Buy Now', {'product' : 'Yoshikane Chef Knife'});")
           .annotation-slider-image
             = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/MeXcSoEzSTCg05jeRkhn?cache=true')
           .annotation-slider-note.note-right
@@ -171,7 +171,7 @@
                   %small click images to enlarge
             = render 'knife_collection_social', title: 'Yoshikane Petty Knife', image: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/zxxRDkwzTDqesXVpJrle'
             %p.section Best for detail slicing—think tomatoes and garlic—this utility knife by Yoshikane has a smooth, slender blade comprised of SLD stainless steel (core) and stainless steel damascus (surface) that slides easily through food. The blade’s suminagashi pattern (meaning "floating ink" in Japanese) together with its light enju wood handle (the same wood used for making Shinto shrines) makes it a perfect balance of artistry and performance.
-            = buy_now(345920201,339)
+            = buy_now(345920201,339,"mixpanel.track('Clicked Knife Buy Now', {'product' : 'Yoshikane Petty Knife'});")
 
 // End Yoshikane //
 
@@ -190,7 +190,7 @@
         .annotation-slider
           .annotation-close-overlay
           .annotation-buttons
-            %a.annotation-slider-btn#sharpening(data-annotation-slider-reveal='left')
+            %a.annotation-slider-btn#sharpening(data-annotation-slider-reveal='left' onclick="mixpanel.track('Viewed Knife Detail', {'product' : 'Sharpening Stones Kit'});")
               +
           .annotation-slider-note.note-left
             %a.annotation-close-btn
@@ -219,7 +219,7 @@
                 %li= link_to 'Nagura Stone', 'http://store.chefsteps.com/products/nagura-stone'
                 %li= link_to 'Stone Holder', 'http://store.chefsteps.com/products/stone-holder'
 
-            = buy_now(350238365,154)
+            = buy_now(350238365,154,"mixpanel.track('Clicked Knife Buy Now', {'product' : 'Sharpening Stone Kit'});")
           .annotation-slider-image
             = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/t3l7VdjR1qjMMWTNufwJ?cache=true')
 
@@ -234,7 +234,7 @@
         .annotation-slider
           .annotation-close-overlay
           .annotation-buttons
-            %a.annotation-slider-btn#honing(data-annotation-slider-reveal='right')
+            %a.annotation-slider-btn#honing(data-annotation-slider-reveal='right' onclick="mixpanel.track('Viewed Knife Detail', {'product' : 'Honing Rod'});")
               +
           .annotation-slider-image
             = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/hmePwJWDRpqFOpXzWQTV?cache=true')
@@ -244,7 +244,7 @@
             %h3 Honing Rod
             = render 'knife_collection_social', title: 'Honing Rod', image: 'https://d3awvtnmmsvyot.cloudfront.net/api/file/hmePwJWDRpqFOpXzWQTV'
             %p Ceramic honing rods keep your knife in excellent condition between sharpening. A high-quality ceramic rod removes minimal material, maintaining a razor sharp edge without reshaping or scratching the blade.
-            = buy_now(345926695,29)
+            = buy_now(345926695,29,"mixpanel.track('Clicked Knife Buy Now', {'product' : 'Honing Rod'});")
 
 // End Honing Rod //
 .section
@@ -260,6 +260,7 @@
   .cs-lightbox-close
     %i.icon-remove
 
-
+:javascript
+  mixpanel.track('Viewed Knife Collection', {'url' : window.location.pathname});
 
 
